Añadida dependencia HBase

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
 			<artifactId>hadoop-client</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase-client</artifactId>
+			<version>0.98.6-hadoop2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
