--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,12 @@
 			<artifactId>mrunit</artifactId>
 			<version>1.1.0</version>
 			<classifier>hadoop2</classifier>
-		</dependency>		
+		</dependency>	
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-minicluster</artifactId>
+			<version>2.5.0</version>
+		</dependency>	
 	</dependencies>
 
 	<build>
